test/functions/whereClauses/whereClauseParamArgMismatch2.good
whereClauseParamArgMismatch2.chpl:10: error: unresolved call 'foo(1.2)'
whereClauseParamArgMismatch2.chpl:1: note: this candidate did not match: foo(param x: uint(8))
whereClauseParamArgMismatch2.chpl:10: note: because call actual argument #1 with type real(64)
whereClauseParamArgMismatch2.chpl:1: note: is passed to formal 'param x: uint(8)'
